init navigation page

--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div>
-        <div></div>
+        <%- include(navigationPath, {tree: tree}); %>
         <div><%- article %></div>
     </div>
 </body>
