--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -12,18 +12,38 @@
 
 <style>
     .container {
+        margin: 15px;
         display: grid;
         grid-template-areas:
+            "title article"
             "navigation article";
         column-gap: 5px;
+        row-gap: 5px;
         grid-template-columns: auto 1fr;
+        grid-template-rows: auto 1fr;
+    }
+
+    .title-area {
+        grid-area: title;
+        font-size: 30px;
+        font-weight: bold;
+        width: 20vw;
+        max-width: 300px;
+        min-width: 200px;
+    }
+
+    .navigation-area {
+        grid-area: navigation;
+        width: 20vw;
+        max-width: 300px;
+        min-width: 200px;
     }
 </style>
 
 <body>
     <div class="container">
-        <div style="grid-area: navigation; width: 20vw; max-width: 300px; min-width: 200px;">
-            <%- include(navigationPath, {tree: tree}); %></div>
+        <div class="title-area"><%- title.replace(/ /g, '\<br>') %></div>
+        <div class="navigation-area"><%- include(navigationPath, {trees: tree.children, path: navigationPath}); %></div>
         <div style="grid-area: article"><%- article %></div>
     </div>
 </body>
