--- a/template/navigation.ejs
+++ b/template/navigation.ejs
@@ -14,6 +14,11 @@
         font-weight: normal;
         font-size: 16px;
     }
+
+    .link {
+        text-decoration: none;
+        color: black;
+    }
 </style>
 
 <% renderTrees = function(trees) { %>
@@ -23,7 +28,7 @@
     <div class="sub-category">
         <% child.articles.forEach(function (article) { %>
         <div class="article">
-            <%= article.title %>
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
         </div>
         <% }); %>
         <%- renderTrees(child.children); %>
