--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -50,9 +50,27 @@
 
     @media only screen and (max-width: 1000px) {
         .container {
+            overflow: hidden;
             grid-template-areas:
-                "navigation title"
-                "navigation article";
+                "title navigation"
+                "article navigation";
+            grid-template-columns: 100vw auto;
+            grid-template-rows: 1fr auto;
+        }
+
+        .navigation-area {
+            grid-area: navigation;
+            background-color: white;
+            margin-left: -100vw;
+            width: 100vw;
+            height: 100vh;
+            max-width: 100vw;
+            min-width: 100vw;
+            transition: 0.3s all;
+        }
+
+        .navigation-area .open {
+            margin-right: 0;
         }
     }
 </style>
