--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -60,8 +60,10 @@
 
         .navigation-area {
             grid-area: navigation;
+            position: fixed;
             background-color: white;
-            margin-left: -100vw;
+            right: -100vw;
+            top: 0;
             width: 100vw;
             height: 100vh;
             max-width: 100vw;
@@ -69,19 +71,24 @@
             transition: 0.3s all;
         }
 
-        .navigation-area .open {
-            margin-right: 0;
+        .navigation-area.open {
+            right: 0;
         }
     }
 </style>
 
 <body>
     <div class="container">
-        <div class="title-area"><%- title.replace(/ /g, '\<br>') %></div>
-        <div class="navigation-area"><%- include(navigationPath, {
+        <div class="title-area">
+            <%- title.replace(/ /g, '\<br>') %>
+            <div onclick="document.getElementById('navigation').classList.add('open')">Icon</div>
+        </div>
+        <div id="navigation" class="navigation-area">
+            <%- include(navigationPath, {
             trees: tree.children,
             parseLink: parseLink,
-        }); %></div>
+            }); %>
+        </div>
         <div style="grid-area: article"><%- article %></div>
     </div>
 </body>
