--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -49,6 +49,7 @@
     .expend-button {
         flex: 1;
         display: none;
+        font-weight: bold;
         text-align: right;
         margin-right: 50px;
         font-size: 50px;
