--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -62,6 +62,10 @@
         min-width: 200px;
     }
 
+    .navigation-content {
+        padding: 0px;
+    }
+
     @media only screen and (max-width: 1000px) {
         .container {
             overflow: hidden;
@@ -80,6 +84,10 @@
 
         .expend-button {
             display: block;
+        }
+
+        .navigation-content {
+            padding: 10px;
         }
 
         .navigation-area {
@@ -108,10 +116,12 @@
             <div class="expend-button" onclick="document.getElementById('navigation').classList.add('open')">⇋</div>
         </div>
         <div id="navigation" class="navigation-area">
-            <%- include(navigationPath, {
-            trees: tree.children,
-            parseLink: parseLink,
-            }); %>
+            <div class="navigation-content">
+                <%- include(navigationPath, {
+                    trees: tree.children,
+                    parseLink: parseLink,
+                }); %>
+            </div>
         </div>
         <div style="grid-area: article"><%- article %></div>
     </div>
