--- a/template/four-o-four.ejs
+++ b/template/four-o-four.ejs
@@ -44,6 +44,23 @@
         font-weight: bold;
         color: blue;
     }
+
+    @media only screen and (max-width: 1000px) {
+
+        .container {
+            display: flex;
+            padding: 20px;
+            height: 100vh;
+            flex-direction: column;
+            box-sizing: border-box;
+            justify-content: center;
+        }
+
+        .title {
+            font-size: 40px;
+            line-height: 43px;
+        }
+    }
 </style>
 
 <body>
