--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="<%= author %>">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="<%= favicon %>">
     <title><%= title %></title>
