implement default stylesheet

--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -130,6 +130,10 @@
     }
 </style>
 
+<style>
+    <%- styleSheet %>
+</style>
+
 <body>
     <div class="container">
         <header class="title-area">
@@ -145,7 +149,7 @@
                 }); %>
             </div>
         </nav>
-        <article class="article-area"><%- article %></article>
+        <article class="article-area style-sheet"><%- article %></article>
     </div>
 </body>
 
