--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -16,6 +16,7 @@
     div {
         padding: 0;
         margin: 0;
+        font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Tahoma, Verdana, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", Arial;
     }
 
     .container {
