--- a/template/four-o-four.ejs
+++ b/template/four-o-four.ejs
@@ -15,6 +15,7 @@
     div {
         padding: 0;
         margin: 0;
+        font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Tahoma, Verdana, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", Arial;
     }
 
     .container {
