implement relative display

--- a/template/navigation.ejs
+++ b/template/navigation.ejs
@@ -12,7 +12,8 @@
 
     .article {
         font-weight: normal;
-        font-size: 16px;
+        line-height: 23px;
+        font-size: 18px;
     }
 
     .link {
