--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -13,6 +13,12 @@
 <style>
     html,
     body,
+    .container {
+        height: 100%;
+    }
+
+    html,
+    body,
     div {
         padding: 0;
         margin: 0;
@@ -22,7 +28,6 @@
     .container {
         box-sizing: border-box;
         width: 100%;
-        padding: 15px;
         display: grid;
         grid-template-areas:
             "title article"
@@ -35,6 +40,8 @@
 
     .title-area {
         grid-area: title;
+        padding-left: 15px;
+        padding-top: 15px;
         width: 20vw;
         max-width: 300px;
         min-width: 200px;
@@ -67,6 +74,9 @@
 
     .navigation-area {
         grid-area: navigation;
+        overflow: auto;
+        padding-left: 15px;
+        padding-bottom: 15px;
         width: 20vw;
         max-width: 300px;
         min-width: 200px;
@@ -77,6 +87,10 @@
     }
 
     .article-area {
+        font-size: 17px;
+        padding-right: 15px;
+        line-height: 22px;
+        overflow: auto;
         grid-area: article;
     }
 
@@ -91,6 +105,7 @@
         }
 
         .title-area {
+            padding-bottom: 10px;
             width: 100vw;
             max-width: 100vw;
             min-width: 100vw;
@@ -118,15 +133,17 @@
             height: 100vh;
             max-width: 100vw;
             min-width: 100vw;
+            visibility: hidden;
             transition: 0.3s all;
         }
 
         .navigation-area.open {
+            visibility: visible;
             right: 0;
         }
 
         .article-area {
-            margin-right: 30px;
+            padding-left: 15px;
         }
     }
 </style>
