fix smooth scrolling ios

--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -80,6 +80,7 @@
         width: 20vw;
         max-width: 300px;
         min-width: 200px;
+        -webkit-overflow-scrolling: touch;
     }
 
     .navigation-content {
@@ -92,6 +93,7 @@
         line-height: 22px;
         overflow: auto;
         grid-area: article;
+        -webkit-overflow-scrolling: touch;
     }
 
     @media only screen and (max-width: 1000px) {
