--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -157,7 +157,7 @@
 <body>
     <div class="container">
         <header class="title-area">
-            <div class="title"><%- title.replace(/ /g, '\<br>') %></div>
+            <div class="title"><%- header.replace(/ /g, '\<br>') %></div>
             <div class="expend-button" onclick="document.getElementById('navigation').classList.add('open')">⇋</div>
         </header>
         <nav id="navigation" class="navigation-area">
