--- a/template/four-o-four.ejs
+++ b/template/four-o-four.ejs
@@ -66,7 +66,7 @@
 
 <body>
     <div class="container">
-        <header class="title"><%- title.replace(/ /g, '\<br>') %></header>
+        <header class="title"><%- header.replace(/ /g, '\<br>') %></header>
         <section class="info">404! Article Not Found Or Viewing Permission Required</section>
         <nav>
             <a class="login" href="<%= authPath %>">
