--- a/template/navigation.ejs
+++ b/template/navigation.ejs
@@ -19,6 +19,11 @@
     .link {
         text-decoration: none;
         color: black;
+        transition: 0.3s all;
+    }
+
+    .link:hover {
+        color: blue;
     }
 </style>
 
