--- a/template/navigation.ejs
+++ b/template/navigation.ejs
@@ -39,6 +39,54 @@
         <% }); %>
         <%- renderTrees(child.children); %>
     </div>
+    <div class="sub-category">
+        <% child.articles.forEach(function (article) { %>
+        <div class="article">
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
+        </div>
+        <% }); %>
+        <%- renderTrees(child.children); %>
+    </div>
+    <div class="sub-category">
+        <% child.articles.forEach(function (article) { %>
+        <div class="article">
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
+        </div>
+        <% }); %>
+        <%- renderTrees(child.children); %>
+    </div>
+    <div class="sub-category">
+        <% child.articles.forEach(function (article) { %>
+        <div class="article">
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
+        </div>
+        <% }); %>
+        <%- renderTrees(child.children); %>
+    </div>
+    <div class="sub-category">
+        <% child.articles.forEach(function (article) { %>
+        <div class="article">
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
+        </div>
+        <% }); %>
+        <%- renderTrees(child.children); %>
+    </div>
+    <div class="sub-category">
+        <% child.articles.forEach(function (article) { %>
+        <div class="article">
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
+        </div>
+        <% }); %>
+        <%- renderTrees(child.children); %>
+    </div>
+    <div class="sub-category">
+        <% child.articles.forEach(function (article) { %>
+        <div class="article">
+            <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
+        </div>
+        <% }); %>
+        <%- renderTrees(child.children); %>
+    </div>
 </div>
 <% }); %>
 <% } %>
