--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -32,8 +32,7 @@
         grid-template-areas:
             "title article"
             "navigation article";
-        column-gap: 5px;
-        row-gap: 5px;
+        column-gap: 20px;
         grid-template-columns: auto 1fr;
         grid-template-rows: auto 1fr;
     }
@@ -42,9 +41,12 @@
         grid-area: title;
         padding-left: 15px;
         padding-top: 15px;
+        padding-bottom: 15px;
         width: 20vw;
         max-width: 300px;
         min-width: 200px;
+        background-color: #001f3f;
+        color: white;
 
         display: flex;
     }
@@ -117,6 +119,13 @@
                 "article";
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
+        }
+
+        .title-area {
+            border-left: 5px solid #001f3f;
+            padding-left: 10px;
+            background-color: white;
+            color: black;
         }
 
         .navigation-area {
