--- a/template/style-sheet.css
+++ b/template/style-sheet.css
@@ -11,3 +11,25 @@
 	padding-top: 7px;
 	padding-top: 7px;
 }
+
+.style-sheet code {
+	padding: 2px 6px;
+	margin: 0;
+	font-size: 90%;
+	background-color: #f7f7f7;
+	border-radius: 3px;
+}
+
+.style-sheet pre code {
+	padding: 0;
+	margin: 0;
+	border-radius: 0;
+	font-size: auto;
+	background-color: inherit;
+}
+
+.style-sheet pre {
+	padding: 6px 10px;
+	background-color: #f7f7f7;
+	border-radius: 3px;
+}
