init render service

--- a/template/navigation.ejs
+++ b/template/navigation.ejs
@@ -32,7 +32,7 @@
 <div class="category">
     <%= child.title %>
     <div class="sub-category">
-        <% child.articles.forEach(function (article) { %>
+        <% child.getVisibleArticles().forEach(function (article) { %>
         <div class="article">
             <a class="link" href="<%= parseLink(article) %>"><%= article.title %></a>
         </div>
