implement self login

--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -54,9 +54,15 @@
 
     .status-area {
         grid-area: status;
+        padding-left: 15px;
+        margin-top: 10px;
+    }
 
-        background-color: #004fa1;
-        color: white;
+    .login {
+        font-size: 18px;
+        text-decoration: none;
+        font-weight: bold;
+        color: blue;
     }
 
     .title {
