fix printing release

--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -142,6 +142,10 @@
             color: black;
         }
 
+        .status-area {
+            display: none;
+        }
+
         .navigation-area {
             display: none;
         }
