remove margin bug

--- a/template/article-public.ejs
+++ b/template/article-public.ejs
@@ -34,6 +34,7 @@
             "status article"
             "navigation article";
         column-gap: 20px;
+        row-gap: 10px;
         grid-template-columns: auto 1fr;
         grid-template-rows: auto auto 1fr;
     }
@@ -55,7 +56,6 @@
     .status-area {
         grid-area: status;
         padding-left: 15px;
-        margin-top: 10px;
     }
 
     .login {
@@ -92,7 +92,6 @@
         grid-area: navigation;
         overflow: auto;
         padding-left: 15px;
-        padding-bottom: 15px;
         width: 20vw;
         max-width: 300px;
         min-width: 200px;
