--- a/template/navigation.ejs
+++ b/template/navigation.ejs
@@ -3,6 +3,7 @@
         font-weight: bold;
         font-size: 18px;
         margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .sub-category {
